[package]
name = "aoc2023rs"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1  # Improve output quality at the cost of slower compilation.
lto = true
opt-level = "z"  # Optimize for size.
panic = "abort"  # Abort instead of unwinding on a panic.
# strip = true
debug = "full"

[[bin]]
name = "day01"
path = "src/day01.rs"

[[bin]]
name = "day02"
path = "src/day02.rs"

[[bin]]
name = "day03"
path = "src/day03.rs"

[[bin]]
name = "day04"
path = "src/day04.rs"

[[bin]]
name = "day05"
path = "src/day05.rs"

[[bin]]
name = "day06"
path = "src/day06.rs"

[[bin]]
name = "day07"
path = "src/day07.rs"

[[bin]]
name = "day08"
path = "src/day08.rs"

[[bin]]
name = "day09"
path = "src/day09.rs"

[dependencies]
num-integer = "~0.1.46"
